// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CookieBanner /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL kEQBzE cookie-banner"
    id="cookie-banner"
  >
    <div
      class="sc-bcXGCL ovXMQ cookie-text-wrapper"
    >
      <p
        class="sc-bcXGCL kbMcWV cap-text"
        style="margin-left: 0px; margin-top: 0px;"
      >
        cookies-text
      </p>
      <button
        class="sc-bcXGCL epyW"
        id="cookies-parameters"
        type="button"
      >
        setup-cookies
      </button>
    </div>
    <div
      class="sc-bcXGCL hkntNi cookie-button"
    >
      <button
        class="sc-bcXGCL fFxubO"
        id="cookie-decline-button"
        type="button"
      >
        decline-optional-cookies
      </button>
      <button
        class="sc-bcXGCL erIlBM btn-cookie-consent"
        id="cookie-consent"
        type="button"
      >
        accept-everything
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CookieContent /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div>
      <div
        class=" ql-editor wysiwyg-render"
      >
        cookies-page-texte-tmp-part1
      </div>
    </div>
    <div
      class=" ql-editor wysiwyg-render"
    >
      cookies-page-texte-part1-2
    </div>
    <div
      class=" ql-editor wysiwyg-render"
    >
      cookies-page-texte-tmp-part1-3
    </div>
    <div
      class=" ql-editor wysiwyg-render"
    >
      blablablabla cookies
    </div>
    <div
      class=" ql-editor wysiwyg-render"
    >
      cookies-page-texte-part2
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CookieManager /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <li
    class="sc-bcXGCL keKWCf"
  >
    <div
      class="sc-bcXGCL kEQBzE cookie-banner"
      id="cookie-banner"
    >
      <div
        class="sc-bcXGCL ovXMQ cookie-text-wrapper"
      >
        <p
          class="sc-bcXGCL kbMcWV cap-text"
          style="margin-left: 0px; margin-top: 0px;"
        >
          cookies-text
        </p>
        <button
          class="sc-bcXGCL epyW"
          id="cookies-parameters"
          type="button"
        >
          setup-cookies
        </button>
      </div>
      <div
        class="sc-bcXGCL hkntNi cookie-button"
      >
        <button
          class="sc-bcXGCL fFxubO"
          id="cookie-decline-button"
          type="button"
        >
          decline-optional-cookies
        </button>
        <button
          class="sc-bcXGCL erIlBM btn-cookie-consent"
          id="cookie-consent"
          type="button"
        >
          accept-everything
        </button>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`<CookieModal /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="cookie-policy"
  >
    <button
      class="sc-bcXGCL keKWCf"
      id="cookies-modal-button"
      type="button"
    >
      cookies
    </button>
  </div>
</DocumentFragment>
`;
